Changed .getFirst() and .getLast() to old version