@@ -283,7 +283,7 @@ public class VisualizationManager {
                 }
 
                 DataService.getInstance().addPointSet(new PointSet(
-                        targets.getFirst().getPos(), targets.getLast().getPos(), name
+                        targets.get(0).getPos(), targets.get(targets.size() - 1).getPos(), name
                 ));
             } catch (ParserConfigurationException | SAXException | IOException e) {
                 e.printStackTrace();
